--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,7 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: Use Node.js
+        uses: actions/setup-node@v1
         with:
           node-version: 12.x
       - name: npm install
