--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,16 +9,16 @@ jobs:
   refresh-rss:
     runs-on: ubuntu-latest
     steps:
+      # Check out code using git
       - uses: actions/checkout@v2
-      - name: Use Node.js
-        uses: actions/setup-node@v1
+      # Install Node 12
+      - uses: actions/setup-node@v1
         with:
-          node-version: 12.x
+          node-version: 12
       - name: npm install
-        run: npm install --only=prod
+        run: npm install
         working-directory: .
       - name: fetch data
-        run: node index.js
-        working-directory: .
-        with:
+        run: node .github/actions/fetch.js
+        env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
