--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ on:
   workflow_dispatch:
 
 jobs:
-  refresh-rss:
+  github-trending:
     runs-on: ubuntu-latest
     steps:
       # Check out code using git
@@ -19,6 +19,6 @@ jobs:
         run: npm install
         working-directory: .
       - name: fetch data
-        run: node .github/actions/fetch.js
+        run: node .github/actions/github-trending.js
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
