--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "main": "index.js",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/guojp-temp/v2ex-rss.git"
+    "url": "git+https://github.com/onysakura/v2ex-rss.git"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/guojp-temp/v2ex-rss/issues"
+    "url": "https://github.com/onysakura/v2ex-rss/issues"
   },
-  "homepage": "https://github.com/guojp-temp/v2ex-rss#readme",
+  "homepage": "https://github.com/onysakura/v2ex-rss#readme",
   "dependencies": {
     "@octokit/action": "^3.7.1",
     "axios": "^0.21.1",
