--- a/.github/workflows/github-trending.yml
+++ b/.github/workflows/github-trending.yml
@@ -19,6 +19,6 @@ jobs:
         run: npm install
         working-directory: .
       - name: fetch data
-        run: node .github/actions/github-trending.js
+        run: node src/actions/github-trending.js
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
