--- a/package.json
+++ b/package.json
@@ -1,22 +1,39 @@
 {
-  "name": "v2ex-rss",
-  "version": "1.0.0",
-  "description": "v2ex-rss",
-  "main": "index.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/onysakura/v2ex-rss.git"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/onysakura/v2ex-rss/issues"
-  },
-  "homepage": "https://github.com/onysakura/v2ex-rss#readme",
-  "dependencies": {
-    "@octokit/action": "^3.7.1",
-    "axios": "^0.21.1",
-    "cheerio": "^0.22.0"
-  }
+    "name": "news-daily",
+    "version": "1.0.0",
+    "description": "news-daily",
+    "main": "index.js",
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/onysakura/news-daily.git"
+    },
+    "type": "module",
+    "keywords": [],
+    "author": "onysakura",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/onysakura/news-daily/issues"
+    },
+    "homepage": "https://github.com/onysakura/news-daily#readme",
+    "scripts": {
+        "build": "tsc --build",
+        "ithome": "node src/actions/ithome-daily.js"
+    },
+    "dependencies": {
+        "@octokit/action": "^4.0.1",
+        "axios": "^0.27.2",
+        "cheerio": "^1.0.0-rc.12",
+        "https-proxy-agent": "^5.0.1"
+    },
+    "devDependencies": {
+        "@types/node": "^18.0.3",
+        "@typescript-eslint/eslint-plugin": "^5.30.5",
+        "@typescript-eslint/parser": "^5.30.5",
+        "eslint": "^8.19.0",
+        "eslint-config-alloy": "^4.6.2",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "prettier": "^2.7.1",
+        "typescript": "^4.7.4"
+    }
 }
