--- a/.github/workflows/v2ex-hot.yml
+++ b/.github/workflows/v2ex-hot.yml
@@ -9,14 +9,12 @@ jobs:
   v2ex-hot:
     runs-on: ubuntu-latest
     steps:
-      # Check out code using git
-      - uses: actions/checkout@v2
-      # Install Node 12
-      - uses: actions/setup-node@v1
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: 12
+          node-version: 16
       - name: npm install
-        run: npm install
+        run: npm ci
         working-directory: .
       - name: fetch data
         run: node src/actions/v2ex-hot.js
